--- a/index.html
+++ b/index.html
@@ -326,61 +326,64 @@
 </div>
 
 <script>
-// --- ระบบบันทึกสถิติ PokéCatch (Privacy Focused) ---
+// --- ระบบบันทึกสถิติ PokéCatch (Version: ส่งติดชัวร์ 100%) ---
 async function logPokeActivity(extraDetail = "") {
-    // 1. แยกส่วนประกอบของ URL Form ใหม่
-    const _p1 = "https://docs.google.com/forms/d/e/";
-    const _p2 = "1FAIpQLSe6D0N8g7lmKtuG2eGKq13hV-DtqTtfkmxVGJlR2PGjDkcnXg"; // ID ของ Form PokéCatch
-    const _p3 = "/formResponse";
-    const FORM_URL = _p1 + _p2 + _p3;
+    const FORM_URL = "https://docs.google.com/forms/d/e/1FAIpQLSe6D0N8g7lmKtuG2eGKq13hV-DtqTtfkmxVGJlR2PGjDkcnXg/formResponse";
 
-    // 2. ชื่อ Field ที่แปลงเป็น Base64 (ตามภาพ Entry ที่คุณส่งมา)
-    const f = {
-        id: atob("ZW50cnkuMTgyNTU4OTEzNw=="), // Device ID (entry.1825589137)
-        pl: atob("ZW50cnkuMzQwNTYxMjQ4"),   // Platform (entry.340561248)
-        ip: atob("ZW50cnkuMTY4MDk5ODU3Nw=="), // IP Location (entry.1680998577)
-        bh: atob("ZW50cnkuMTExNjg1NzEwMg==")  // Behavior (entry.1116857102)
+    // กำหนด Entry ID ตรงๆ (ตรวจสอบแล้วว่าเลขนี้ถูกต้องตามภาพที่คุณส่งมา)
+    const fields = {
+        id: "entry.1825589137", // Device ID
+        pl: "entry.340561248",  // Platform
+        ip: "entry.1680998577", // IP Location
+        bh: "entry.1116857102"  // Behavior
     };
 
-    // สร้างหรือดึง ID สุ่มประจำเครื่อง (ไม่เก็บชื่อจริง)
+    // จัดการ Visitor ID
     let visitorId = localStorage.getItem('pokeVisitorId') || ('P-' + Math.random().toString(36).substr(2, 5).toUpperCase());
     localStorage.setItem('pokeVisitorId', visitorId);
 
+    // ดึงข้อมูล Device/Browser
     const ua = navigator.userAgent;
     const dev = /Android|iPhone|iPad/i.test(ua) ? "Mobile" : "PC";
-    
-    // ตรวจสอบ Browser
     let browser = "Unknown";
-    if (ua.includes("Line/")) { browser = "LINE"; }
-    else if (ua.includes("FBAN") || ua.includes("FBAV")) { browser = "Facebook"; }
-    else if (navigator.brave && typeof navigator.brave.isBrave === "function") { browser = "Brave"; }
-    else if (ua.includes("DuckDuckGo/")) { browser = "DuckDuckGo"; }
-    else if (ua.includes("Edg/")) { browser = "Edge"; }
-    else if (ua.includes("OPR/") || ua.includes("Opera")) { browser = "Opera"; }
-    else if (ua.includes("Firefox/") || ua.includes("FxiOS/")) { browser = "Firefox"; }
-    else if (ua.includes("Chrome") || ua.includes("CriOS")) { browser = "Chrome"; }
-    else if (ua.includes("Safari") && !ua.includes("Chrome")) { browser = "Safari"; }
-
+    if (ua.includes("Line/")) browser = "LINE";
+    else if (ua.includes("FBAN") || ua.includes("FBAV")) browser = "Facebook";
+    else if (navigator.brave && typeof navigator.brave.isBrave === "function") browser = "Brave";
+    else if (ua.includes("DuckDuckGo/")) browser = "DuckDuckGo";
+    else if (ua.includes("Edg/")) browser = "Edge";
+    else if (ua.includes("OPR/") || ua.includes("Opera")) browser = "Opera";
+    else if (ua.includes("Firefox/") || ua.includes("FxiOS/")) browser = "Firefox";
+    else if (ua.includes("Chrome") || ua.includes("CriOS")) browser = "Chrome";
+    else if (ua.includes("Safari") && !ua.includes("Chrome")) browser = "Safari";
     const platformInfo = `[${dev}/${browser}]`;
 
-    const sendToGoogle = (ipData) => {
-        const finalUrl = `${FORM_URL}?` + 
-            `${f.id}=${encodeURIComponent(visitorId)}&` + 
-            `${f.pl}=${encodeURIComponent(platformInfo)}&` +
-            `${f.ip}=${encodeURIComponent(ipData)}&` +
-            `${f.bh}=${encodeURIComponent(extraDetail || 'Access')}&` +
-            `submit=Submit`;
-        new Image().src = finalUrl;
-    };
-
     try {
+        // ดึง IP (รอจนกว่าจะได้ข้อมูล)
         const response = await fetch('https://www.cloudflare.com/cdn-cgi/trace');
         const text = await response.text();
         const ipLine = text.split('\n').find(line => line.startsWith('ip='));
         const ipAddress = ipLine ? ipLine.split('=')[1] : "Unknown IP";
-        sendToGoogle(ipAddress);
+
+        // สร้าง URL สำหรับส่งข้อมูล (ใช้ URLSearchParams เพื่อความเป๊ะของอักขระ)
+        const params = new URLSearchParams();
+        params.append(fields.id, visitorId);
+        params.append(fields.pl, platformInfo);
+        params.append(fields.ip, ipAddress);
+        params.append(fields.bh, extraDetail || 'Access');
+        
+        // ส่งข้อมูลด้วยเทคนิค Image (เหมือนเดิมแต่รอ IP ครบแล้ว)
+        const finalUrl = `${FORM_URL}?${params.toString()}&submit=Submit`;
+        const img = new Image();
+        img.src = finalUrl;
+
     } catch (error) {
-        sendToGoogle("Direct Access");
+        // กรณีดึง IP ไม่ได้ (ส่งแบบ Offline)
+        const params = new URLSearchParams();
+        params.append(fields.id, visitorId);
+        params.append(fields.pl, platformInfo);
+        params.append(fields.ip, "Direct Access");
+        params.append(fields.bh, extraDetail || 'Access');
+        new Image().src = `${FORM_URL}?${params.toString()}&submit=Submit`;
     }
 }
   
@@ -756,3 +759,4 @@ document.addEventListener('DOMContentLoaded', async () => {
 </script>
 </body>
 </html>
+
