--- a/index.html
+++ b/index.html
@@ -326,46 +326,49 @@
 </div>
 
 <script>
-// --- ระบบบันทึกสถิติ PokéCatch (ID แก้ไขถูกต้องแล้ว) ---
+// --- ระบบบันทึกสถิติ PokéCatch (Version: แก้ไขประตูสุดท้าย ส่งติดชัวร์) ---
 async function logPokeActivity(extraDetail = "") {
     const FORM_URL = "https://docs.google.com/forms/d/e/1FAIpQLSe6D0N8g7lmKtuG2eGKq13hV-DtqTtfkmxVGJlR2PGjDkcnXg/formResponse";
 
-    // ใช้เลข ID ที่ถูกต้องตามที่พี่แจ้งมา
-    const f = {
-        id: "entry.421679450",   // Device ID
-        pl: "entry.520244575",   // Platform
-        ip: "entry.1202430595",  // IP Location
-        bh: "entry.1255545661"   // Behavior
-    };
+    // เช็ค ID ให้ตรงตามที่พี่ระบุ (Device, Platform, IP, Behavior)
+    const f_id = "entry.421679450";
+    const f_pl = "entry.520244575";
+    const f_ip = "entry.1202430595";
+    const f_bh = "entry.1255545661";
 
+    // จัดการ Visitor ID
     let visitorId = localStorage.getItem('pokeVisitorId') || ('P-' + Math.random().toString(36).substr(2, 5).toUpperCase());
     localStorage.setItem('pokeVisitorId', visitorId);
 
-    const ua = navigator.userAgent;
-    const dev = /Android|iPhone|iPad/i.test(ua) ? "Mobile" : "PC";
-    let browser = "Unknown";
-    if (ua.includes("Line/")) browser = "LINE";
-    else if (ua.includes("FBAN") || ua.includes("FBAV")) browser = "Facebook";
-    else if (navigator.brave && typeof navigator.brave.isBrave === "function") browser = "Brave";
-    else if (ua.includes("Edg/")) browser = "Edge";
-    else if (ua.includes("Chrome")) browser = "Chrome";
-    else if (ua.includes("Safari")) browser = "Safari";
-    
-    const platformInfo = `[${dev}/${browser}]`;
+    // ดึงข้อมูล Platform แบบไม่มีอักขระพิเศษเพื่อความปลอดภัย
+    const dev = /Android|iPhone|iPad/i.test(navigator.userAgent) ? "Mobile" : "PC";
+    const platformInfo = dev + " Browser"; // ใช้ข้อความเรียบง่ายกัน URL ขาดตอน
 
     try {
-        const response = await fetch('https://www.cloudflare.com/cdn-cgi/trace');
-        const text = await response.text();
-        const ipLine = text.split('\n').find(line => line.startsWith('ip='));
-        const ipAddress = ipLine ? ipLine.split('=')[1] : "Unknown IP";
+        // 1. ดึง IP (ถ้าช้าให้ข้ามไปส่งแบบ Direct)
+        let ipAddress = "Direct Access";
+        try {
+            const response = await fetch('https://www.cloudflare.com/cdn-cgi/trace', { timeout: 2000 });
+            const text = await response.text();
+            ipAddress = text.split('\n').find(line => line.startsWith('ip=')).split('=')[1];
+        } catch (e) { /* ข้ามการดึง IP */ }
 
-        const finalUrl = `${FORM_URL}?${f.id}=${encodeURIComponent(visitorId)}&${f.pl}=${encodeURIComponent(platformInfo)}&${f.ip}=${encodeURIComponent(ipAddress)}&${f.bh}=${encodeURIComponent(extraDetail || 'Access')}&submit=Submit`;
-        
-        const img = new Image();
-        img.src = finalUrl;
+        // 2. สร้าง FormData (วิธีที่ Google Form รับค่าได้เสถียรที่สุด)
+        const formData = new FormData();
+        formData.append(f_id, visitorId);
+        formData.append(f_pl, platformInfo);
+        formData.append(f_ip, ipAddress);
+        formData.append(f_bh, extraDetail || 'Access');
+
+        // 3. ส่งข้อมูลแบบ Silent (no-cors)
+        fetch(FORM_URL, {
+            method: 'POST',
+            mode: 'no-cors',
+            body: formData
+        });
+
     } catch (error) {
-        const finalUrl = `${FORM_URL}?${f.id}=${encodeURIComponent(visitorId)}&${f.pl}=${encodeURIComponent(platformInfo)}&${f.ip}=Direct&${f.bh}=${encodeURIComponent(extraDetail || 'Access')}&submit=Submit`;
-        new Image().src = finalUrl;
+        console.error("Log failed:", error);
     }
 }
   
@@ -741,6 +744,7 @@ document.addEventListener('DOMContentLoaded', async () => {
 </script>
 </body>
 </html>
+
 
 
 
